# Nutrient_db_MCP

./: .gitattributes  .gitignore  README.md  claude_desktop_config.json  detailed_food_db_analysis.json  food_db_analysis.json  nutrient_mapping.json  pyproject.toml
src/usda_mcp_server/: __init__.py  db_eda.py  server.py  setup_nutrient_db.py  test_nutrient_db.py
